workshop03/db-config.yaml
---
apiVersion: v1
kind: Namespace

metadata:
  name: nwapp
  labels:
    version: v1
