workshop03/app-v1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nwapp-v1-deploy
  namespace: nwapp
  labels:
    name: nwapp-v1
    version: v1

spec:
  # number of pods
  replicas: 3
  selector:
    matchLabels:
      name: nwapp-v1
      version: v1
  template:
    # pod template
    metadata:
      name: nwapp-v1-pod
      labels:
        name: nwapp-v1
        version: v1
    spec:
      containers:
        - name: nwapp-container
          image: metamagpie/nwapp:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: nwapp-port
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          ports:
            - name: nwapp-port
              containerPort: 3000
