workshop03/app-v2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nwapp-v2-deploy
  namespace: nwapp
  labels:
    name: nwapp-v2
    version: v1

spec:
  # number of pods
  replicas: 3
  selector:
    matchLabels:
      name: nwapp-v2
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    # pod template
    metadata:
      name: nwapp-v2-pod
      labels:
        name: nwapp-v2
        version: v1
    spec:
      containers:
        - name: nwapp-container
          image: stackupiss/northwind-app:v2
          imagePullPolicy: IfNotPresent
          ports:
            - name: nwapp-port
              containerPort: 3000
