workshop03/db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nwdb-deploy
  namespace: nwapp
  labels:
    name: nwdb
    version: v1

spec:
  # number of pods
  replicas: 1
  minReadySeconds: 60
  selector:
    matchLabels:
      name: nwdb
      version: v1
  template:
    # pod template
    metadata:
      name: nwdb-pod
      labels:
        name: nwdb
        version: v1
    spec:
      volumes:
        - name: nwdb-volume
          persistentVolumeClaim:
            claimName: mysqldb-pvc
      containers:
        - name: nwdb-container
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: nwdb-volume
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          image: metamagpie/nwdb:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: nwdb-port
              containerPort: 3306
