workshop03/app-v1-svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: nwapp-v1-svc
  namespace: nwapp
  labels:
    name: nwapp-v1-svc
    version: v1

spec:
  type: ClusterIP
  selector:
    name: nwapp-v1
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: nwapp-port
