workshop03/app-v2-svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: nwapp-v2-svc
  namespace: nwapp
  labels:
    name: nwapp-v2-svc
    version: v1

spec:
  type: ClusterIP
  selector:
    name: nwapp-v2
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: nwapp-port
