workshop03/db-svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: nwdb-svc
  namespace: nwapp
  labels:
    name: nwdb-svc
    version: v1

spec:
  type: ClusterIP
  selector:
    name: nwdb
    version: v1
  ports:
    - name: http
      port: 3306
      targetPort: nwdb-port
