workshop03/app-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: myapp-ing
  namespace: nwapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - host: app1.157.230.192.227.nip.io
      http:
        paths:
          - backend:
              serviceName: nwapp-v1-svc
              servicePort: 80
    - host: app2.157.230.192.227.nip.io
      http:
        paths:
          - backend:
              serviceName: nwapp-v2-svc
              servicePort: 80
  backend:
    serviceName: nwapp-v2-svc
    servicePort: 80
